# pdf-extraction

./: README.md  main.py  pyproject.toml
.github/workflows/: docker.yaml
templates/: index.html
tests/: test_extract.py  test_generate_txt.py
