[project]
name = "pdf-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "google-genai>=1.68.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 105
exclude = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
